--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="save">Save</string>
     <string name="delete">Delete</string>
     <string name="add">Add</string>
+    <string name="setMenu">Settings</string>
 </resources>
