--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,10 @@
     <string name="cars_model">Model</string>
     <string name="age">Age of production</string>
     <string name="type_cars">Types</string>
-    <string name="price_value">Price (in euros)</string>
     <string name="save">Save</string>
     <string name="delete">Delete</string>
     <string name="add">Add</string>
     <string name="setMenu">Settings</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="fuel">Fuel type </string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
