--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,10 @@
     <string name="add">Add</string>
     <string name="setMenu">Settings</string>
     <string name="fuel">Fuel type </string>
+    <string name="chilometer">Total chilometer </string>
+    <string name="license_plate">License plate </string>
+    <string name="displacement">Displacement </string>
+    <string name="unit_cil">cm^3</string>
+    <string name="unit_km">km</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
