--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="displacement">Displacement </string>
     <string name="unit_cil">cm^3</string>
     <string name="unit_km">km</string>
+    <string name="modelInf">Model:</string>
+    <string name="plateInf">Plate:</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
