--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="chilometer_error">"Insert a valid value for "Total chilometer""</string>
     <string name="plate_error">"Insert a valid value for "License plate""</string>
     <string name="plate_warning">"Insert a valid value for "License plate" in format AB123CD"</string>
+    <string name="vehicles_warning">There\'s no vehicles here :(</string>
+
 
 
 
