--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VehichlesList</string>
+    <string name="app_name">VehiclesList</string>
     <string name="cars_name">Brand*</string>
     <string name="cars_model">Model*</string>
     <string name="age">Age of production*</string>
