--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="type_cars">Types</string>
     <string name="save">Save</string>
     <string name="delete">Delete</string>
+    <string name="undo">undo</string>
     <string name="add">Add</string>
     <string name="setMenu">Settings</string>
     <string name="fuel">Fuel type </string>
