--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="save">Save</string>
     <string name="delete">Delete</string>
     <string name="undo">undo</string>
-    <string name="Ok">OK</string>
+    <string name="Ok">Ok</string>
     <string name="add">Add</string>
     <string name="setMenu">Settings</string>
     <string name="fuel">Fuel type </string>
