--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="confirm_add">Confirm Add</string>
     <string name="delete_text">Are you sure you want to delete this car?</string>
     <string name="confirm_text">Are you sure you want to add this car?</string>
+    <string name="displacement_error">"Insert a valid value for "Displacement""</string>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
