--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,14 +13,14 @@
     <string name="fuel">Fuel type </string>
     <string name="chilometer">Total chilometer* </string>
     <string name="license_plate">Plate* </string>
-    <string name="displacement">Displacement </string>
+    <string name="displacement">Displacement* </string>
     <string name="unit_cil">cm^3</string>
     <string name="unit_km">km</string>
     <string name="modelInf">Model:</string>
     <string name="plateInf">Plate:</string>
     <string name="channel_name">car_channel</string>
     <string name="channel_description">car_reminder</string>
-    <string name="toast_error">Generic error!</string>
+    <string name="age_displac_check">Check age and displacement</string>
     <string name="name_error">Insert a valid value for "Brand""</string>
     <string name="model_error">"Insert a valid value for "Model""</string>
     <string name="age_error">"Insert a valid value for "Age of production""</string>
