--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="plateInf">Plate:</string>
     <string name="channel_name">car_channel</string>
     <string name="channel_description">car_reminder</string>
-    <string name="age_displac_check">Check age and displacement</string>
+    <string name="age_displac_check">Generic error</string>
     <string name="name_error">Insert a valid value for "Brand""</string>
     <string name="model_error">"Insert a valid value for "Model""</string>
     <string name="age_error">"Insert a valid value for "Age of production""</string>
@@ -33,7 +33,7 @@
     <string name="delete_text">Are you sure you want to delete this car?</string>
     <string name="confirm_text">Are you sure you want to add this car?</string>
     <string name="displacement_error">"Insert a valid value for "Displacement""</string>
-    <string name="optional">"Generic error"</string>
+    <string name="optional">"Optional info"</string>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
