Added network check for ethernet, wifi and cellular data in types and fuel type field

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="confirm_text">Are you sure you want to add this car?</string>
     <string name="displacement_error">"Insert a valid value for "Displacement""</string>
     <string name="optional">"Optional info"</string>
+    <string name="no_internet">"Check your internet connection and retry again :c"</string>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
